--- a/www/ui/milestone2x_screens/2-2-0.html
+++ b/www/ui/milestone2x_screens/2-2-0.html
@@ -155,6 +155,26 @@
 		
 		<p id="functnbar"><input type="submit" value="submit" />&#160;<input type="submit" value="reset" />&#160;<input type="submit" value="save this query" /></p>
 		
+		<h3>Select save query</h3>
+		<div class="axial">
+			<table width="100%" cellpadding="3" cellspacing="2" border="1">
+			<tr>
+			<th width="120">saved queries:</th>	
+			<td><select>
+			<option>
+			Saved query X
+			</option>	
+			<option>
+			Saved query Y
+			</option>	
+			<option>
+			Saved query Z
+			</option>
+			</select>&#160;<input type="submit" value="select" /> &#160;<a href="#">Saved query list</a></td>
+			</tr>
+			</table>
+		</div>
+		
 		<h3>Search the Scarab Knowledge Base</h3>
 
 		<div class="axial">
@@ -166,7 +186,113 @@
 			
 			<tr>
 			<th width="120">issue creation date range:</th>
-			<td>from:&#160;<input type="text" size="20" value="" />&#160;&#160;to:&#160;<input type="text" size="20" value="" /></td>
+			<td>from:
+				&#160;<select>
+				<option>Jan</option>
+				<option>Feb</option>
+				<option>Mar</option>
+				<option>Apr</option>
+				<option>May</option>
+				<option>Jun</option>
+				<option>Jul</option>
+				<option>Aug</option>
+				<option>Sep</option>
+				<option>Oct</option>
+				<option>Nov</option>
+				<option>Dec</option>
+				</select>&#160;<select>
+				<option>01</option>
+				<option>02</option>
+				<option>03</option>
+				<option>04</option>
+				<option>05</option>
+				<option>06</option>
+				<option>07</option>
+				<option>08</option>
+				<option>09</option>
+				<option>10</option>
+				<option>11</option>
+				<option>12</option>
+				<option>13</option>
+				<option>14</option>
+				<option>15</option>
+				<option>16</option>
+				<option>17</option>
+				<option>18</option>
+				<option>19</option>
+				<option>20</option>
+				<option>21</option>
+				<option>22</option>
+				<option>23</option>
+				<option>24</option>
+				<option>25</option>
+				<option>26</option>
+				<option>27</option>
+				<option>28</option>
+				<option>29</option>
+				<option>30</option>
+				<option>31</option>
+				</select>&#160;<select>
+				<option>1999</option>
+				<option>2000</option>
+				<option>2001</option>
+				<option>2002</option>
+				<option>2003</option>
+				</select>&#160;
+				
+				to:&#160;<select>
+				<option>Jan</option>
+				<option>Feb</option>
+				<option>Mar</option>
+				<option>Apr</option>
+				<option>May</option>
+				<option>Jun</option>
+				<option>Jul</option>
+				<option>Aug</option>
+				<option>Sep</option>
+				<option>Oct</option>
+				<option>Nov</option>
+				<option>Dec</option>
+				</select>&#160;<select>
+				<option>01</option>
+				<option>02</option>
+				<option>03</option>
+				<option>04</option>
+				<option>05</option>
+				<option>06</option>
+				<option>07</option>
+				<option>08</option>
+				<option>09</option>
+				<option>10</option>
+				<option>11</option>
+				<option>12</option>
+				<option>13</option>
+				<option>14</option>
+				<option>15</option>
+				<option>16</option>
+				<option>17</option>
+				<option>18</option>
+				<option>19</option>
+				<option>20</option>
+				<option>21</option>
+				<option>22</option>
+				<option>23</option>
+				<option>24</option>
+				<option>25</option>
+				<option>26</option>
+				<option>27</option>
+				<option>28</option>
+				<option>29</option>
+				<option>30</option>
+				<option>31</option>
+				</select>&#160;<select>
+				<option>1999</option>
+				<option>2000</option>
+				<option>2001</option>
+				<option>2002</option>
+				<option>2003</option>
+				</select>
+			</td>
 			</tr>
 			
 			<tr>
