--- a/www/ui/milestone4x_screens/2-5-0.html
+++ b/www/ui/milestone4x_screens/2-5-0.html
@@ -1,105 +1,227 @@
 <!DOCTYPE html PUBLIC "-//CollabNet//DTD XHTML 1.0 Transitional//EN"
 "http://collabnet.com/dtds/collabnet_transitional_10.dtd">
-
 <html>
- <head>
-  <title>Workflow Customization Options (2.5.0)</title>
-  <link rel="stylesheet" type="text/css" href="../csi/style/main.css" />
-  <link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />
-  <link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" />
- </head>
 
- <body>
-  <form action="#" method="get">
-   <div id="globalnav">
-    <p><a href="#">globalnav</a> | <a href="#">item1</a> | <a href="#">item2</a></p>
-   </div>
+<head>
+<title>Workflow Customization Options (2.5.0)</title>
+	<link rel="stylesheet" type="text/css" href="../csi/style/main.css" media="screen" />
+	<link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />
+	<link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" />
+</head>
 
-   <table border="0" cellspacing="0" cellpadding="0" width="95%">
-    <tr>
-     <td width="100" id="leftcol">
-      <div id="projnav">
-       <a href="#">projectnav</a> 
+<body>
+<form action="#" method="get">
 
-       <ul>
-        <li><a href="#">item1</a></li>
+	<!-- SourceCast -->
+	<div id="banner">
+		<table border="0" cellspacing="12" cellpadding="0" width="100%">
+		<tr>
+		
+		<td>
+		<div align="right" id="loginstatus">
+			<div>
+				Logged in as: <strong class="username">User XX</strong>
+			</div>
+			<div>
+				<a href="#">Edit Profile</a> | <a href="#">Logout</a>
+			</div>
+		</div>
+		</td>
+		</tr>
+		</table>
+	</div>
+	<!-- SourceCast -->
+	
+	<!-- Structural Elements -->
+<table border="0" cellspacing="0" cellpadding="0" width="100%">
+<tr>
+<td id="leftcol" nowrap="nowrap" width="20%">
+<!-- Structural Elements -->
+	
+	<!-- SourceCast -->
+	<div id="navcol">
+		<table border="0" cellspacing="0" cellpadding="0" width="100%">
+			<tr>
+			<th>
+			<a href="#">Start page</a>
+			</th>
+			</tr>
+			<tr>
+			<th>
+			<a href="#">Projects</a>/<a href="#">Categories</a>
+			</th>
+			</tr>
+			<tr>
+			<td>&nbsp;</td>
+			</tr>
+			<tr>
+			<th>
+			Project tools
+			</th>
+			</tr>
+			<tr>
+			<td>
+			<div>&nbsp;&nbsp;<a href="#">Documents</a></div>
+			<div>&nbsp;&nbsp;Issue tracking</div>
+			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Enter issue</div>
+			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#">Reports</a></div>
+			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#">Vote management</a></div>
+			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#">Workflow options</a></div>
+			<div>&nbsp;&nbsp;<a href="#">Mailing lists</a></div> 
+			<div>&nbsp;&nbsp;<a href="#">Members</a></div>  
+			<div>&nbsp;&nbsp;<a href="#">News</a></div>
+			<div>&nbsp;&nbsp;<a href="#">Source code</a></div>
+			</td>
+			</tr>
+			<tr>
+			<td>&nbsp;</td>
+			</tr>
+			<tr>
+			<th>
+			&nbsp;<a href="#">Admin Functions</a>
+			</th>
+			</tr>
+		</table>
+	</div>
+	<!-- SourceCast -->
+	
+	<!-- SourceCast -->
+	<div id="helptext">
+		<table border="0" cellspacing="0" cellpadding="3" width="100%">
+		<tr>
+		<th>How do I...?</th>
+		</tr>
+		<tr>
+		<td>
+			<div> 
+				<a href="#">[Go to help index]</a>
+			</div>
+			<div> 
+				<a href="#">Use this page</a>...
+			</div>
+			<div>
+				<a href="#">Learn about a project</a>...
+			</div>
+			<div>
+				<a href="#">Join a project</a>...
+			</div>
+		</td>
+		</tr>
+		</table>
+	</div>
+	<!-- SourceCast -->
+	
+<!-- Structural Elements -->
+</td>
+<td id="bodycol">
+<!-- Structural Elements -->
 
-        <li><a href="#">item2</a></li>
-       </ul>
+	<!-- Scarab - App -->
+	<div id="topmodule">
+		<table border="0" cellspacing="0" cellpadding="3" width="100%">
+		<tr>
+			<td nowrap="nowrap">
+			<select>
+			<option>saved queries</option>
+			<option>query one</option>
+			<option>query two</option>
+			</select> 
+			<input type="submit" name="query" value="Go" class="bttn" />
+			&nbsp;
+			<input type="text" size="15" name="" />
+			<input type="submit" name="query" value="Query" class="bttn" />
+			&nbsp;
+			<a href="#">Advanced</a>&nbsp;|&nbsp;<a href="#">Custom</a>
+			</td>			
+		</tr>
+		</table>
+	</div>
+	<!-- Scarab - App -->
+	
+	<!-- Scarab - App -->
+	<div class="app" id="div2-5-0">
+		<h2>Workflow Customization Options (2.5.0)</h2>
+		
+		<p id="functnbar"><input type="submit" value="save" />&#160;<input type="submit" value="cancel" />&#160;<input type="submit" value="reset to defaults" /></p>
+		
+		<h3>My new issue alert (email)</h3>
+		
+		<p><input type="checkbox" /> send single email with all new issues 
+		<select>
+		<option>daily</option>
+		<option>hourly</option>
+		<option>both</option>
+		</select></p>
+		
+		<p><input type="checkbox" /> send one email per new issue 
+		<select>
+		<option>daily</option>
+		<option>hourly</option>
+		<option>both</option>
+		</select></p>
+		
+		<h3>Daily status (email)</h3>
+		
+		<p><input type="checkbox" /> all new issues / assignees for all projects 
+		<select>
+		<option>daily</option>
+		<option>hourly</option>
+		<option>both</option>
+		</select></p>
+		
+		<p><input type="checkbox" /> new issues / assignees per project 
+		<select>
+		<option>daily</option>
+		<option>hourly</option>
+		<option>both</option>
+		</select></p>
+		
+		<h3>Issue report (email)</h3>
+		
+		<p><input type="checkbox" /> all assigned issues 
+		<select>
+		<option>daily</option>
+		<option>hourly</option>
+		<option>both</option>
+		</select></p>
+		
+		<p><input type="checkbox" /> all unassigned issues 
+		<select>
+		<option>daily</option>
+		<option>hourly</option>
+		<option>both</option>
+		</select></p>
+		
+		<p><input type="checkbox" /> all issues
+		<select>
+		<option>daily</option>
+		<option>hourly</option>
+		<option>both</option>
+		</select></p>
 
-       <p><a href="http://collabnet.cleverchimp.com/dtds/validator.html">validate me</a></p>
-      </div>
-     </td>
+		<p id="functnbar"><input type="submit" value="save" />&#160;<input type="submit" value="cancel" />&#160;<input type="submit" value="reset to defaults" /></p>
+	</div>
+	<!-- Scarab - App -->
 
-     <td id="bodycol">
-      <div id="featurenav">
-       <p class="crumbing"><a href="#">crumbing</a> &gt; <a href="#">item1</a> &gt; item2</p>
+<!-- Structural Elements -->
+</td>
+</tr>
+</table>
+<!-- Structural Elements -->
 
-       <p><a href="#">primaryfeaturenav</a> | <a href="#">item1</a> | <a href="#">item2</a></p>
-      </div>
+	<!-- SourceCast -->
+	<div id="footer">
+		<p>
+		<a href="#">Domain Home</a> |
+		<a href="#">Help</a> | 
+		<a href="#">Site FAQ</a> |
+		<a href="#">Feedback</a>
+		</p>
+	</div>
+	<!-- SourceCast -->
 
-      <div class="app" id="div2-6-1">
-      <h2>Workflow Customization Options (2.5.0)</h2>
-
-      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip</p>
-
-<p class="functnbar"><input type="submit" value="save" />&#160;<input type="submit" value="cancel" />&#160;<input type="submit" value="reset to defaults" /></p>
-
-
-	  <h3>My new issue alert (email)</h3>
-	  <p><input type="checkbox" /> send single email with all new issues 
-	  <select>
-          <option>daily</option>
-		  <option>hourly</option>
-		  <option>both</option>
-	  </select></p>
-	  <p><input type="checkbox" /> send one email per new issue 
-	  <select>
-          <option>daily</option>
-		  <option>hourly</option>
-		  <option>both</option>
-	  </select></p>
-	 
-	  <h3>Daily status (email)</h3>
-	  <p><input type="checkbox" /> all new issues / assignees for all projects 
-	  <select>
-          <option>daily</option>
-		  <option>hourly</option>
-		  <option>both</option>
-	  </select></p>
-	  <p><input type="checkbox" /> new issues / assignees per project 
-	  <select>
-          <option>daily</option>
-		  <option>hourly</option>
-		  <option>both</option>
-	  </select></p>
-	  
-	  <h3>Issue report (email)</h3>
-	  <p><input type="checkbox" /> all assigned issues 
-	  <select>
-          <option>daily</option>
-		  <option>hourly</option>
-		  <option>both</option>
-	  </select></p>
-	  <p><input type="checkbox" /> all unassigned issues 
-	  <select>
-          <option>daily</option>
-		  <option>hourly</option>
-		  <option>both</option>
-	  </select></p>
-	  <p><input type="checkbox" /> all issues
-	  <select>
-          <option>daily</option>
-		  <option>hourly</option>
-		  <option>both</option>
-	  </select></p>
-
-<p class="functnbar"><input type="submit" value="save" />&#160;<input type="submit" value="cancel" />&#160;<input type="submit" value="reset to defaults" /></p>
-     </div></td>
-    </tr>
-   </table>
-  </form>
- </body>
+</form>
+</body>
 </html>
 
 
