--- a/www/ui/milestone5x_screens/3-5-1.html
+++ b/www/ui/milestone5x_screens/3-5-1.html
@@ -1,1 +1,243 @@
-<!DOCTYPE html PUBLIC "-//CollabNet//DTD XHTML 1.0 Transitional//EN""http://collabnet.com/dtds/collabnet_transitional_10.dtd"><html> <head>  <title>define custom alert email (3.5.1)</title>  <link rel="stylesheet" type="text/css" href="../csi/style/main.css" />  <link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />  <link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" /> </head> <body>  <form action="#" method="get">   <div id="globalnav">    <p><a href="#">globalnav</a> | <a href="#">item1</a> | <a href="#">item2</a></p>   </div>   <table border="0" cellspacing="0" cellpadding="0" width="95%">    <tr>     <td width="100" id="leftcol">      <div id="projnav">       <a href="#">projectnav</a>        <ul>        <li><a href="#">item1</a></li>        <li><a href="#">item2</a></li>       </ul>       <p><a href="http://collabnet.cleverchimp.com/dtds/validator.html">validate me</a></p>      </div>     </td>     <td id="bodycol">      <div id="featurenav">       <p class="crumbing"><a href="#">crumbing</a> &gt; <a href="#">item1</a> &gt; item2</p>       <p><a href="#">primaryfeaturenav</a> | <a href="#">item1</a> | <a href="#">item2</a></p>      </div>      <div class="app" id="div3-5-1">      <h2>define custom alert email (3.5.1)</h2>      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip</p>	  	  		  	  	<p class="functnbar"><input type="submit" value="save" />&nbsp;<input type="submit" value="cancel" class="button" />&nbsp;<input type="submit" value="clear form" class="button" /></p>	  <h3>custom alert email for project:</h3>	  <p><select>          <option>select project</option>		  <option>-------------</option>		  <option>project X</option>		  <option>--project X.1</option>		  <option>--project X.2</option>		  <option>-------------</option>		  		  <option>project y</option>		  <option>--project Y.1</option>		  <option>-------------</option>		  <option>project Z</option>		  		 </select>	  </p>	  	  <h3>email contents</h3><div class="axial">       <table width="100%" border="1" cellspacing="2" cellpadding="3">        <tr>         <th width="120">subject:</th>         <td><input type="text" size="25" value="" /></td>        </tr>        <tr>         <th width="120">email body:</th>         <td><textarea rows="4" cols="40">         </textarea></td>        </tr>        <tr>         <th width="120">author:</th>         <td>Joe Smo<br><a href="#">joes@users.com</a></td>        </tr>                </table></div>	  <h3>attributes queried in email</h3>      <p><a href="#">Add/remove attributes from query</a></p>		      <p>Select radio button to select default sort attribute</p>             <table width="100%" border="1" cellspacing="2" cellpadding="3">        <tr>         <th><input type="radio" name="sort by" />&nbsp;attribute A:</th>         <th><input type="radio" name="sort by" />&nbsp;attribute b:</th>         <th><input type="radio" name="sort by" />&nbsp;attribute c:</th>         <th><input type="radio" name="sort by" />&nbsp;attribute d:</th>        </tr>        <tr class="a">         <td><select>          <option>attrib a search string</option>		  </select>		  </td>         <td><input type="text" value="attrib b search string" /></td>         <td><input type="text" value="attrib c search string" /></td>         <td><input type="text" value="attrib d search string" /></td>        </tr>        </table>         <p>Sort&nbsp;<select>          <option>ascending</option>		  <option>descending</option>		 </select>	  </p>       <p>Issues per email:&#160; <input type="radio" name="foo" /> 25 <input type="radio" name="foo" /> 50 <input type="radio" name="foo" /> 75 <input type="radio" name="foo" /> 100</p>	 	  	  	  	<p class="functnbar"><input type="submit" value="save" />&nbsp;<input type="submit" value="cancel" class="button" />&nbsp;<input type="submit" value="clear form" class="button" /></p>             </div></td>    </tr>   </table>  </form> </body></html>
+<!DOCTYPE html PUBLIC "-//CollabNet//DTD XHTML 1.0 Transitional//EN"
+"http://collabnet.com/dtds/collabnet_transitional_10.dtd">
+<html>
+
+<head>
+	<title>Define Custom Alert Email (3.5.1)</title>
+	<link rel="stylesheet" type="text/css" href="../csi/style/main.css" media="screen" />
+	<link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />
+	<link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" />
+</head>
+
+<body>
+<form action="#" method="get">
+
+	<!-- SourceCast -->
+	<div id="banner">
+		<table border="0" cellspacing="12" cellpadding="0" width="100%">
+		<tr>
+		
+		<td>
+		<div align="right" id="loginstatus">
+			<div>
+				Logged in as: <strong class="username">User XX</strong>
+			</div>
+			<div>
+				<a href="#">Edit Profile</a> | <a href="#">Logout</a>
+			</div>
+		</div>
+		</td>
+		</tr>
+		</table>
+	</div>
+	<!-- SourceCast -->
+	
+	<!-- Structural Elements -->
+<table border="0" cellspacing="0" cellpadding="0" width="100%">
+<tr>
+<td id="leftcol" nowrap="nowrap" width="20%">
+<!-- Structural Elements -->
+	
+	<!-- SourceCast -->
+	<div id="navcol">
+		<table border="0" cellspacing="0" cellpadding="0" width="100%">
+			<tr>
+			<th>
+			<a href="#">Start page</a>
+			</th>
+			</tr>
+			<tr>
+			<th>
+			<a href="#">Projects</a>/<a href="#">Categories</a>
+			</th>
+			</tr>
+			<tr>
+			<td>&nbsp;</td>
+			</tr>
+			<tr>
+			<th>
+			Project tools
+			</th>
+			</tr>
+			<tr>
+			<td>
+			<div>&nbsp;&nbsp;<a href="#">Documents</a></div>
+			<div>&nbsp;&nbsp;Issue tracking</div>
+			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Enter issue</div>
+			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#">Reports</a></div>
+			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#">Vote management</a></div>
+			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#">Workflow options</a></div>
+			<div>&nbsp;&nbsp;<a href="#">Mailing lists</a></div> 
+			<div>&nbsp;&nbsp;<a href="#">Members</a></div>  
+			<div>&nbsp;&nbsp;<a href="#">News</a></div>
+			<div>&nbsp;&nbsp;<a href="#">Source code</a></div>
+			</td>
+			</tr>
+			<tr>
+			<td>&nbsp;</td>
+			</tr>
+			<tr>
+			<th>
+			&nbsp;<a href="#">Admin Functions</a>
+			</th>
+			</tr>
+		</table>
+	</div>
+	<!-- SourceCast -->
+	
+	<!-- SourceCast -->
+	<div id="helptext">
+		<table border="0" cellspacing="0" cellpadding="3" width="100%">
+		<tr>
+		<th>How do I...?</th>
+		</tr>
+		<tr>
+		<td>
+			<div> 
+				<a href="#">[Go to help index]</a>
+			</div>
+			<div> 
+				<a href="#">Use this page</a>...
+			</div>
+			<div>
+				<a href="#">Learn about a project</a>...
+			</div>
+			<div>
+				<a href="#">Join a project</a>...
+			</div>
+		</td>
+		</tr>
+		</table>
+	</div>
+	<!-- SourceCast -->
+	
+<!-- Structural Elements -->
+</td>
+<td id="bodycol">
+<!-- Structural Elements -->
+
+	<!-- Scarab - App -->
+	<div id="topmodule">
+		<table border="0" cellspacing="0" cellpadding="3" width="100%">
+		<tr>
+			<td nowrap="nowrap">
+			<select>
+			<option>saved queries</option>
+			<option>query one</option>
+			<option>query two</option>
+			</select> 
+			<input type="submit" name="query" value="Go" class="bttn" />
+			&nbsp;
+			<input type="text" size="15" name="" />
+			<input type="submit" name="query" value="Query" class="bttn" />
+			&nbsp;
+			<a href="#">Advanced</a>&nbsp;|&nbsp;<a href="#">Custom</a>
+			</td>			
+		</tr>
+		</table>
+	</div>
+	<!-- Scarab - App -->
+	
+	<!-- Scarab - App -->
+	<div class="app" id="div3-5-1">
+		<h2>Define Custom Alert Email (3.5.1)</h2>
+		
+		<p id="functnbar"><input type="submit" value="save" />&nbsp;<input type="submit" value="cancel" class="button" />&nbsp;<input type="submit" value="clear form" class="button" /></p>
+		
+		<h3>custom alert email for project:</h3>
+		
+		<p><select>
+		<option>select project</option>
+		<option>-------------</option>
+		<option>project X</option>
+		<option>--project X.1</option>
+		<option>--project X.2</option>
+		<option>-------------</option>		  
+		<option>project y</option>
+		<option>--project Y.1</option>
+		<option>-------------</option>
+		<option>project Z</option>		  
+		</select>
+		</p>
+		
+		<h3>Email Contents</h3>
+		
+		<div class="axial">
+			<table width="100%" border="1" cellspacing="2" cellpadding="3">
+			<tr>
+			<th width="120">subject:</th>
+			<td><input type="text" size="25" value="" /></td>
+			</tr>
+			
+			<tr>
+			<th width="120">email body:</th>
+			<td><textarea rows="4" cols="40">
+			</textarea></td>
+			</tr>
+			
+			<tr>
+			<th width="120">author:</th>
+			<td>Joe Smo<br><a href="#">joes@users.com</a></td>
+			</tr>
+			
+			</table>
+		</div>
+		
+		<h3>attributes queried in email</h3>
+		
+		<p><a href="#">Add/remove attributes from query</a></p>
+		
+		<p>Select radio button to select default sort attribute</p>
+		
+		<table width="100%" border="1" cellspacing="2" cellpadding="3">
+		<tr>
+		<th><input type="radio" name="sort by" />&nbsp;attribute A:</th>
+		<th><input type="radio" name="sort by" />&nbsp;attribute b:</th>
+		<th><input type="radio" name="sort by" />&nbsp;attribute c:</th>
+		<th><input type="radio" name="sort by" />&nbsp;attribute d:</th>
+		</tr>
+		
+		<tr class="a">
+		<td><select>
+		<option>attrib a search string</option>
+		</select>
+		</td>
+		<td><input type="text" value="attrib b search string" /></td>
+		<td><input type="text" value="attrib c search string" /></td>
+		<td><input type="text" value="attrib d search string" /></td>
+		</tr>
+		</table>
+		
+		<p>Sort&nbsp;<select>
+		<option>ascending</option>
+		<option>descending</option>
+		</select>
+		</p>
+		
+		<p>Issues per email:&#160; <input type="radio" name="foo" /> 25 <input type="radio" name="foo" /> 50 <input type="radio" name="foo" /> 75 <input type="radio" name="foo" /> 100</p>
+
+		<p id="functnbar"><input type="submit" value="save" />&nbsp;<input type="submit" value="cancel" class="button" />&nbsp;<input type="submit" value="clear form" class="button" /></p>
+	</div>
+	<!-- Scarab - App -->
+
+<!-- Structural Elements -->
+</td>
+</tr>
+</table>
+<!-- Structural Elements -->
+
+	<!-- SourceCast -->
+	<div id="footer">
+		<p>
+		<a href="#">Domain Home</a> |
+		<a href="#">Help</a> | 
+		<a href="#">Site FAQ</a> |
+		<a href="#">Feedback</a>
+		</p>
+	</div>
+	<!-- SourceCast -->
+
+</form>
+</body>
+</html>
+
